# 222ICI_Sarnowski

missions/TargetMonitor/: .LastOpenedMOOSLogDirectory  alpha.moos
missions/TargetMonitor/MOOSLog_1_7_2026_____07_18_43/: MOOSLog_1_7_2026_____07_18_43._moos  MOOSLog_1_7_2026_____07_18_43.alog  MOOSLog_1_7_2026_____07_18_43.xlog  MOOSLog_1_7_2026_____07_18_43.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____07_40_59/: MOOSLog_1_7_2026_____07_40_59._moos  MOOSLog_1_7_2026_____07_40_59.alog  MOOSLog_1_7_2026_____07_40_59.xlog  MOOSLog_1_7_2026_____07_40_59.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____07_46_12/: MOOSLog_1_7_2026_____07_46_12._moos  MOOSLog_1_7_2026_____07_46_12.alog  MOOSLog_1_7_2026_____07_46_12.xlog  MOOSLog_1_7_2026_____07_46_12.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____07_47_36/: MOOSLog_1_7_2026_____07_47_36._moos  MOOSLog_1_7_2026_____07_47_36.alog  MOOSLog_1_7_2026_____07_47_36.xlog  MOOSLog_1_7_2026_____07_47_36.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____07_48_21/: MOOSLog_1_7_2026_____07_48_21._moos  MOOSLog_1_7_2026_____07_48_21.alog  MOOSLog_1_7_2026_____07_48_21.xlog  MOOSLog_1_7_2026_____07_48_21.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____07_52_49/: MOOSLog_1_7_2026_____07_52_49._moos  MOOSLog_1_7_2026_____07_52_49.alog  MOOSLog_1_7_2026_____07_52_49.xlog  MOOSLog_1_7_2026_____07_52_49.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____07_53_41/: MOOSLog_1_7_2026_____07_53_41._moos  MOOSLog_1_7_2026_____07_53_41.alog  MOOSLog_1_7_2026_____07_53_41.xlog  MOOSLog_1_7_2026_____07_53_41.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____07_56_33/: MOOSLog_1_7_2026_____07_56_33._moos  MOOSLog_1_7_2026_____07_56_33.alog  MOOSLog_1_7_2026_____07_56_33.xlog  MOOSLog_1_7_2026_____07_56_33.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____07_57_28/: MOOSLog_1_7_2026_____07_57_28._moos  MOOSLog_1_7_2026_____07_57_28.alog  MOOSLog_1_7_2026_____07_57_28.xlog  MOOSLog_1_7_2026_____07_57_28.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____08_04_26/: MOOSLog_1_7_2026_____08_04_26._moos  MOOSLog_1_7_2026_____08_04_26.alog  MOOSLog_1_7_2026_____08_04_26.xlog  MOOSLog_1_7_2026_____08_04_26.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____08_05_24/: MOOSLog_1_7_2026_____08_05_24._moos  MOOSLog_1_7_2026_____08_05_24.alog  MOOSLog_1_7_2026_____08_05_24.xlog  MOOSLog_1_7_2026_____08_05_24.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____08_07_06/: MOOSLog_1_7_2026_____08_07_06._moos  MOOSLog_1_7_2026_____08_07_06.alog  MOOSLog_1_7_2026_____08_07_06.xlog  MOOSLog_1_7_2026_____08_07_06.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____08_07_46/: MOOSLog_1_7_2026_____08_07_46._moos  MOOSLog_1_7_2026_____08_07_46.alog  MOOSLog_1_7_2026_____08_07_46.xlog  MOOSLog_1_7_2026_____08_07_46.ylog
missions/TargetMonitor/MOOSLog_1_7_2026_____08_08_32/: MOOSLog_1_7_2026_____08_08_32._moos  MOOSLog_1_7_2026_____08_08_32.alog  MOOSLog_1_7_2026_____08_08_32.xlog  MOOSLog_1_7_2026_____08_08_32.ylog
missions/lab1/MOOSLog_12_3_2026_____14_52_15/: MOOSLog_12_3_2026_____14_52_15.alog
missions/lab2/: alpha.moos
missions/lab3/: alpha.moos
missions/lab4/: alpha.moos
missions/lab5/: alpha.moos
missions/lab6/: alpha.moos
missions/lab7/: alpha.moos  bravo.moos  launch.sh  shoreside.moos
missions/lab8/: alpha.bhv  alpha.moos  shoreside.moos
missions/lab9/: alpha.bhv  alpha.moos  bravo.bhv  bravo.moos  shoreside.moos
missions/s1_alpha/: .LastOpenedMOOSLogDirectory
src/: CMakeLists.txt
src/pTargetMonitor/: CMakeLists.txt  TargetMonitor.cpp  TargetMonitor.h  TargetMonitor_Info.cpp  TargetMonitor_Info.h  main.cpp
src/pZad01/: CMakeLists.txt  Zad01.cpp  Zad01.h  Zad01_Info.cpp  Zad01_Info.h  main.cpp
src/pZad02/: CMakeLists.txt  Zad02.cpp  Zad02.h  Zad02_Info.cpp  Zad02_Info.h  main.cpp
src/pZad03/: CMakeLists.txt  Zad03.cpp  Zad03.h  Zad03_Info.cpp  Zad03_Info.h  main.cpp
src/pZad04/: CMakeLists.txt  Zad04.cpp  Zad04.h  Zad04_Info.cpp  Zad04_Info.h  main.cpp
src/pZad05/: CMakeLists.txt  Zad05.cpp  Zad05.h  Zad05_Info.cpp  Zad05_Info.h  main.cpp
src/pZad06/: CMakeLists.txt  Zad06.cpp  Zad06.h  Zad06_Info.cpp  Zad06_Info.h  main.cpp
src/pZad07/: CMakeLists.txt  Zad07.cpp  Zad07.h  Zad07_Info.cpp  Zad07_Info.h  main.cpp
src/pZad08S/: CMakeLists.txt  Zad08S.cpp  Zad08S.h  Zad08S_Info.cpp  Zad08S_Info.h  main.cpp
src/pZad08U/: CMakeLists.txt  Zad08U.cpp  Zad08U.h  Zad08U_Info.cpp  Zad08U_Info.h  main.cpp
(+3 files in other folders)
